crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__suite__tests__named_expression.snap
---
source: crates/ruff_python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
Named(
    ExprNamed {
        range: 1..15,
        target: Name(
            ExprName {
                range: 1..2,
                id: "x",
                ctx: Store,
            },
        ),
        value: BinOp(
            ExprBinOp {
                range: 8..13,
                left: Name(
                    ExprName {
                        range: 8..9,
                        id: "y",
                        ctx: Load,
                    },
                ),
                op: Mult,
                right: Name(
                    ExprName {
                        range: 12..13,
                        id: "z",
                        ctx: Load,
                    },
                ),
            },
        ),
    },
)
