crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__suite__tests__parse_bool_op_or.snap
---
source: crates/ruff_python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
BoolOp(
    ExprBoolOp {
        range: 0..6,
        op: Or,
        values: [
            Name(
                ExprName {
                    range: 0..1,
                    id: "x",
                    ctx: Load,
                },
            ),
            Name(
                ExprName {
                    range: 5..6,
                    id: "y",
                    ctx: Load,
                },
            ),
        ],
    },
)
