crates/ruff_python_parser/src/parser/tests/snapshots/ruff_python_parser__parser__tests__suite__tests__parse_class.snap
---
source: crates/ruff_python_parser/src/parser/tests/suite.rs
expression: "parse_suite(source).unwrap()"
---
[
    ClassDef(
        StmtClassDef {
            range: 0..98,
            decorator_list: [],
            name: Identifier {
                id: "Foo",
                range: 6..9,
            },
            type_params: None,
            arguments: Some(
                Arguments {
                    range: 9..15,
                    args: [
                        Name(
                            ExprName {
                                range: 10..11,
                                id: "A",
                                ctx: Load,
                            },
                        ),
                        Name(
                            ExprName {
                                range: 13..14,
                                id: "B",
                                ctx: Load,
                            },
                        ),
                    ],
                    keywords: [],
                },
            ),
            body: [
                FunctionDef(
                    StmtFunctionDef {
                        range: 18..44,
                        is_async: false,
                        decorator_list: [],
                        name: Identifier {
                            id: "__init__",
                            range: 22..30,
                        },
                        type_params: None,
                        parameters: Parameters {
                            range: 30..36,
                            posonlyargs: [],
                            args: [
                                ParameterWithDefault {
                                    range: 31..35,
                                    parameter: Parameter {
                                        range: 31..35,
                                        name: Identifier {
                                            id: "self",
                                            range: 31..35,
                                        },
                                        annotation: None,
                                    },
                                    default: None,
                                },
                            ],
                            vararg: None,
                            kwonlyargs: [],
                            kwarg: None,
                        },
                        returns: None,
                        body: [
                            Pass(
                                StmtPass {
                                    range: 40..44,
                                },
                            ),
                        ],
                    },
                ),
                FunctionDef(
                    StmtFunctionDef {
                        range: 46..98,
                        is_async: false,
                        decorator_list: [],
                        name: Identifier {
                            id: "method_with_default",
                            range: 50..69,
                        },
                        type_params: None,
                        parameters: Parameters {
                            range: 69..90,
                            posonlyargs: [],
                            args: [
                                ParameterWithDefault {
                                    range: 70..74,
                                    parameter: Parameter {
                                        range: 70..74,
                                        name: Identifier {
                                            id: "self",
                                            range: 70..74,
                                        },
                                        annotation: None,
                                    },
                                    default: None,
                                },
                                ParameterWithDefault {
                                    range: 76..89,
                                    parameter: Parameter {
                                        range: 76..79,
                                        name: Identifier {
                                            id: "arg",
                                            range: 76..79,
                                        },
                                        annotation: None,
                                    },
                                    default: Some(
                                        StringLiteral(
                                            ExprStringLiteral {
                                                range: 80..89,
                                                value: StringLiteralValue {
                                                    inner: Single(
                                                        StringLiteral {
                                                            range: 80..89,
                                                            value: "default",
                                                            flags: StringLiteralFlags {
                                                                quote_style: Single,
                                                                prefix: "",
                                                                triple_quoted: false,
                                                            },
                                                        },
                                                    ),
                                                },
                                            },
                                        ),
                                    ),
                                },
                            ],
                            vararg: None,
                            kwonlyargs: [],
                            kwarg: None,
                        },
                        returns: None,
                        body: [
                            Pass(
                                StmtPass {
                                    range: 94..98,
                                },
                            ),
                        ],
                    },
                ),
            ],
        },
    ),
]
